# context_os

./: .gitattributes  .gitignore  .mcp.json.template  AGENTS.md  AGENT_OS_CONSTITUTION.md  AGENT_OS_ROADMAP.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  IMPLEMENTATION_STATUS.md  README.md  biome.json  package-lock.json  package.json  pyproject.toml  tsconfig.json  vitest.config.ts
.github/: copilot-instructions.md  pull_request_template.md
bootstrap/: bootstrap.ps1  bootstrap.sh
config/: risk_rules.yaml  strategies.yaml
context_os_runtime/: approval.py  authority.py  binding.py  cli.py  constitution_verifier.py  doctor.py  event_log.py  events.py  interceptor.py  lock.py  manifest.py  memory_router.py  models.py  projection.py  runtime_paths.py  session_store.py  state.py  versioning.py
data_store/: README.md  knowledge.jsonl
docs/: 2026-05-14-skill-pack-architecture-audit.md  DEFINITION_OF_DONE.md  DEV_PROD_ENVIRONMENTS.md  INSTALL_UPDATE_UNINSTALL_CONTRACT.md  PI_RUNTIME_SMOKE_MATRIX.md  RELEASE_PROCESS.md  SOLO_DEV_OPERATING_MODEL.md  WORK_INDEX.md  compatibility.md  narration-tags.md  release-notes-rc1.md  release-notes-v1.6.0.md  v1-readiness.md  v1-release-checklist.md
execution/: SKILL_REGISTRY.md
graphify-out/: .graphify_labels.json  .graphify_python  .graphify_root  Agent_OS-callflow.html  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
memory/: MEMORY.md
scripts/: _board.sh  bootstrap.ps1  bootstrap.sh  compute_constitution_hash.py  dev-smoke.ts  generate_contract_index.py  story-close.sh  story-done.sh  story-start.sh  sync.ps1  (+2 more)
(+280 files in other folders)
